--- a/tests/localhost/index.html
+++ b/tests/localhost/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" />
+<meta charset="utf-8" />
 </head>
 <body>
-
+hello... it is me you're looking for?
 </body>
 </html>
